--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>);"></div>
+      <div class="profile__image darken-on-hover">
+        <div class="edit_image"></div>
+      </div>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -36,9 +38,29 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input type="text" 
+          name="name" 
+          class="popup__input popup__input_type_name" 
+          placeholder="Имя" 
+          id="name_input"
+          required 
+          minlength="2" 
+          maxlength="40"  
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$">
+          <span class="name_input-error"></span>
+        <input type="text" 
+          name="description" 
+          class="popup__input popup__input_type_description" 
+          placeholder="Занятие"
+          id="about_input"
+          required 
+          minlength="2" 
+          maxlength="200"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$">
+          <span class="about_input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -47,9 +69,26 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new-place" novalidate>
+        <input type="text" 
+          name="place-name" 
+          class="popup__input popup__input_type_card-name" 
+          placeholder="Название" 
+          minlength="2" 
+          maxlength="30"
+          id="card_name_input"
+          required
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$">
+        <span class="card_name_input-error"></span>
+        <input 
+          type="url" 
+          name="link" 
+          class="popup__input popup__input_type_url" 
+          placeholder="Ссылка на картинку" 
+          id="url_input"
+          required>
+        <span class="url_input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -61,6 +100,30 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+  <div class="popup popup_type_require">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Вы уверены?</h3>
+      <button type="submit" class="button popup__button">Да</button>
+    </div>
+  </div>
+  <div class="popup popup_type_edit_avatar">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-avatar">
+        <input 
+            type="url" 
+            name="link" 
+            class="popup__input popup__input_type_url" 
+            placeholder="Ссылка на картинку" 
+            id="url_input"
+            required>
+            <span class="url_input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
 </div>
 
 <template id="card-template">
@@ -70,7 +133,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="like_group" >
+        <button type="button" class="card__like-button"></button>
+        <p class="like_counter">0</p>
+      </div>
     </div>
   </li>
 </template>
