--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
           maxlength="40"  
           data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
           pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$">
-          <span class="name_input-error"></span>
+          <span class="input-error name_input-error"></span>
         <input type="text" 
           name="description" 
           class="popup__input popup__input_type_description" 
@@ -60,7 +60,7 @@
           maxlength="200"
           data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
           pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$">
-          <span class="about_input-error"></span>
+          <span class="input-error about_input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -80,7 +80,7 @@
           required
           data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
           pattern="^[a-zA-Zа-яА-ЯёЁ\-\s]+$">
-        <span class="card_name_input-error"></span>
+        <span class="input-error card_name_input-error"></span>
         <input 
           type="url" 
           name="link" 
@@ -88,7 +88,7 @@
           placeholder="Ссылка на картинку" 
           id="url_input"
           required>
-        <span class="url_input-error"></span>
+        <span class="input-error url_input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -119,7 +119,7 @@
             placeholder="Ссылка на картинку" 
             id="url_input"
             required>
-            <span class="url_input-error"></span>
+            <span class="input-error url_input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
